--- a/docs/tutorials/tutorial_01.ipynb
+++ b/docs/tutorials/tutorial_01.ipynb
@@ -5,8 +5,7 @@
    "id": "637cf5c7-a398-4c9c-8ac4-d28a377de2cd",
    "metadata": {},
    "source": [
-    "## Load modules\n",
-    "convexgating auf add_hull branch (05.12.2023)"
+    "## Load modules\n"
    ]
   },
   {
